# blade

./: .gitmodules
apps/blade-cli/include/blade-cli/telescopes/ata/: config.hh  mode_b.hh  mode_bs.hh
apps/blade-cli/include/blade-cli/telescopes/vla/: mode_b.hh
apps/blade-cli/src/: base.cc
apps/blade-cli/src/telescopes/: ata.cc
include/blade/: config.hh.in  plan.hh  runner.hh
include/blade/memory/: copy.hh
include/blade/memory/devices/cuda/: copy.hh
include/blade/modules/: base.hh  gatherhostside.hh
include/blade/modules/bfr5/: reader.hh
include/blade/modules/guppi/: reader.hh
include/blade/modules/seticore/: dedoppler.hh  hits_raw_writer.hh  hits_stamp_writer.hh
include/blade/pipelines/ata/: mode_bs.hh
include/blade/pipelines/generic/: file_reader.hh  mode_s.hh
meson/: meson.build
meson/seticore/: meson.build
python/: meson.build
python/blade/: ext_bfr5.cc  ext_gatherhostside.cc  ext_guppi.cc  meson.build
python/blade/_internal/: __init__.py
src/modules/: meson.build
src/modules/bfr5/: base.cc
src/modules/gatherhostside/: base.cc  meson.build
src/modules/guppi/: reader.cc
src/modules/phasor/: ata.cc
src/modules/seticore/: dedoppler.cc  hits_raw_writer.cc  hits_stamp_writer.cc  meson.build
src/pipelines/ata/: meson.build  mode_bs.cc
src/pipelines/generic/: file_reader.cc  mode_s.cc
tests/apps/blade-cli/: manual.md
tests/modules/: meson.build
tests/modules/gatherhostside/: gatherhostside.py  meson.build
tests/pipelines/ata/mode-b/: mode_b.cc
tests/pipelines/ata/mode-bh/: mode_bh.cc
