sum_lst = {}

subdir('cast')
subdir('phasor')
subdir('detector')
subdir('beamformer')
subdir('channelizer')
subdir('polarizer')
subdir('gather')
subdir('permutation')
subdir('duplicate')
subdir('guppi')
subdir('bfr5')
subdir('seticore')
subdir('gatherhostside')

summary(sum_lst, section: 'Modules', bool_yn: true)
